Fix jumping letters line heights

--- a/src/styles/about-me.scss
+++ b/src/styles/about-me.scss
@@ -17,4 +17,5 @@
 
 #about-me-page .description-wrapper {
   width: 80%;
+  line-height: 48px;
 }
